# AgentParty

./: .coderabbit.yaml  .gitignore  .htmldock.toml  LICENSE  README.md  README.zh.md  install-desktop.sh  install.sh  package.json
.github/: dependabot.yml
cli/: package.json
desktop/: package.json
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: agent.rs  duty.rs  lib.rs  ui_download.rs  ui_protocol.rs  ui_storage.rs  ui_update.rs
desktop/src-tauri/src/duty/: reconcile.rs
docs/: 2026-07-21-sdk-daemon-residency.html  channel-backup-recovery.html  grok-pool-gateway.md  mcp-notification-idle-wake-spike.html  party-etiquette.md  statusline-contract.md
scripts/: apple-signing-mode.test.ts  apple-signing-mode.ts  ci-paths-filter.test.ts  configure-apple-release.test.ts  configure-apple-release.ts  deploy-ci.test.ts  desktop-adhoc-acceptance.test.ts  desktop-adhoc-acceptance.ts  desktop-pairing-smoke.test.ts  desktop-production-acceptance.test.ts  desktop-production-acceptance.ts  desktop-release-workflow.test.ts  desktop-ui-bundle.test.ts  desktop-ui-bundle.ts  desktop-ui-manifest.test.ts  desktop-ui-manifest.ts  desktop-ui-release-workflow.test.ts  desktop-update-manifest.test.ts  desktop-update-manifest.ts  grok-pool-gateway.test.ts  grok-pool-gateway.ts  grok-pool-server.test.ts  grok-pool-server.ts  install-desktop.test.ts  install.test.ts  linuxdo_grok_replenish.py  linuxdo_grok_replenish_test.py  prepare-desktop-sidecar.test.ts  release.sh  (+9 more)
(+563 files in other folders)
