[package]
name = "agentparty-desktop"
version = "0.1.0"
description = "AgentParty desktop shell"
authors = ["AgentParty"]
license = "BUSL-1.1"
edition = "2021"

[lib]
name = "agentparty_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
